initialize react query, react query devtools and reactflow

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
       - "8000:8000"
     volumes:
       - ./frontend/src:/app/src # bind mount
+      - ./frontend/index.html:/app/index.html # bind mount
     stdin_open: true # -it => input part
     tty: true # -it => terminal part
     depends_on:
