Revert "fix scripts"
This reverts commit d77965b6b074ee63a7e71eee942b465edba70b5c.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
           password: ${{secrets.SERVER_PASSWORD}}
           script_stop: true
           command_timeout: 200m
-          script: 
-            - cd /home/apps/workflow-app
-            - git pull
-            - docker-compose -f docker-compose-prod.yaml up -d --build
+          script: /
+            cd /home/apps/workflow-app
+            git pull
+            docker-compose -f docker-compose-prod.yaml up -d --build
