--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
           host: ${{secrets.SERVER_IP}}
           username: ${{secrets.SERVER_USERNAME}}
           password: ${{secrets.SERVER_PASSWORD}}
+          key: ${{secrets.PRIVATE_KEY}}
           script_stop: true
           command_timeout: 200m
           script: |
