--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
         with:
           host: ${{secrets.SERVER_IP}}
           username: ${{secrets.SERVER_USERNAME}}
-          password: ${{secrets.SERVER_PASSWORD}}
-          key: ${{secrets.PRIVATE_KEY}}
+          # password: ${{secrets.SERVER_PASSWORD}}
+          key: ${{secrets.SSH_PRIVATE_KEY}}
           script_stop: true
           command_timeout: 200m
           script: |
