--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -6,11 +6,13 @@ services:
     restart: unless-stopped
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - web-root:/var/www/html
       - ./nginx-conf:/etc/nginx/conf.d
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
+      - dhparam:/etc/ssl/certs
     depends_on:
       - backend
   mongodb:
@@ -26,7 +28,7 @@ services:
     build: ./backend
     ports:
       - "8080:8080"
-      - "443:443"
+      
     volumes:
       - ./backend:/app 
       - /app/node_modules
@@ -57,3 +59,9 @@ volumes:
       type: none
       device: /home/apps/workflow-app/
       o: bind  
+  dhparam:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/apps/workflow-app/dhparam/
+      o: bind
