--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,27 @@ on:
     branches:
     - main
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Test
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{secrets.SERVER_IP}}
+          username: ${{secrets.SERVER_USERNAME}}
+          key: ${{secrets.SSH_PRIVATE_KEY}}
+          script_stop: true
+          command_timeout: 200m
+          script: |
+            cd /home/apps/workflow-app
+            git pull
+            docker-compose up -d
+            docker exec -it backend bash -c "npm run test"
+            docker-compose down
   deploy:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - uses: actions/checkout@v1
       - name: Deploy to Production
@@ -13,7 +32,6 @@ jobs:
         with:
           host: ${{secrets.SERVER_IP}}
           username: ${{secrets.SERVER_USERNAME}}
-          # password: ${{secrets.SERVER_PASSWORD}}
           key: ${{secrets.SSH_PRIVATE_KEY}}
           script_stop: true
           command_timeout: 200m
