bring back tty true and change docker compose down command

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,6 +29,7 @@ services:
       - ./frontend/index.html:/app/index.html # bind mount
       - ./frontend/tailwind.config.js:/app/tailwind.config.js # bind mount
     stdin_open: true # -it => input part
+    tty: true # -it => terminal part
     env_file:
       - ./frontend/dev.env
     depends_on:
