--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
             git pull
             docker-compose up -d
             docker exec backend npm run test
-            docker-compose down
+            docker-compose docker-compose.yaml down
   deploy:
     runs-on: ubuntu-latest
     needs: test
