--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -15,6 +15,8 @@ services:
       - dhparam:/etc/ssl/certs
     depends_on:
       - backend
+    networks:
+      - app-network
   mongodb:
     image: "mongo"
     volumes:
@@ -23,6 +25,8 @@ services:
       - ./mongo.env
     ports:
       - "27017:27017"
+    networks:
+      - app-network
   backend:
     build: ./backend
     ports:
@@ -35,6 +39,8 @@ services:
     depends_on:
       - mongodb
     container_name: backend
+    networks:
+      - app-network
   certbot:
     image: certbot/certbot
     container_name: certbot
@@ -61,3 +67,6 @@ volumes:
       type: none
       device: /home/apps/workflow-app/dhparam/
       o: bind        
+networks:
+  app-network:
+    driver: bridge
