--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -1,7 +1,7 @@
 server {
         listen 80;
         listen [::]:80;
-        server_name workflowapp.online www.workflowapp.online
+        server_name workflowapp.store www.workflowapp.store
         ;
 
         location ~ /.well-known/acme-challenge {
@@ -17,12 +17,12 @@ server {
 server {
         listen 443 ssl http2;
         listen [::]:443 ssl http2;
-        server_name workflowapp.online www.workflowapp.online;
+        server_name workflowapp.store www.workflowapp.store;
 
         server_tokens off;
 
-        ssl_certificate /etc/letsencrypt/live/workflowapp.online/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/workflowapp.online/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/workflowapp.store/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/workflowapp.store/privkey.pem;
 
         ssl_buffer_size 8k;
 
@@ -58,4 +58,8 @@ server {
         root /var/www/html;
         index index.html index.htm index.nginx-debian.html;
 }
+
+
+
+
 
