--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "1.19.0",
+    "cors": "^2.8.5",
     "express": "4.17.1",
     "mongoose": "5.10.3"
   },
   "devDependencies": {
-    "nodemon": "2.0.4",
+    "@babel/preset-env": "7.22.9",
     "jest": "29.6.2",
-    "@babel/preset-env": "7.22.9"
+    "nodemon": "2.0.4"
   },
   "type": "module",
   "jest": {
