proxy set headers for cors

--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -51,13 +51,17 @@ server {
                 add_header X-Content-Type-Options "nosniff" always;
                 add_header Referrer-Policy "no-referrer-when-downgrade" always;
                 add_header Content-Security-Policy "default-src * data: 'unsafe-eval' 'unsafe-inline'" always;
-                #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+                proxy_set_header 'Access-Control-Allow-Origin' '*';
+                proxy_set_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                proxy_set_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin';
+                #proxy_set_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
                 # enable strict transport security only if you understand the implications
         }
 
         root /var/www/html;
         index index.html index.htm index.nginx-debian.html;
 }
+
 
 
 
